--- a/contact_us.html
+++ b/contact_us.html
@@ -14,7 +14,8 @@
 
         html, body {
             height: 100%;
-            background: url("images/home/background2.gif");
+            background: url("images/home/background2.gif") no-repeat center center fixed;
+            background-size: cover;
             font-family: 'Poppins', sans-serif;
             color: #f5f5f5;
             display: flex;
@@ -33,6 +34,7 @@
             border-bottom: 2px solid #ffcc00;
             z-index: 1000;
             backdrop-filter: blur(8px);
+            position: relative;
         }
 
         .logo img {
@@ -60,6 +62,29 @@
             text-shadow: 0 0 10px #ff9900;
         }
 
+        .menu-toggle {
+            display: none;
+            font-size: 30px;
+            cursor: pointer;
+            color: white;
+        }
+
+        .nav-links.active {
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            top: 70px;
+            right: 30px;
+            background: rgba(0, 0, 0, 0.9);
+            padding: 20px;
+            border-radius: 10px;
+            border: 2px solid #ffcc00;
+        }
+
+        .nav-links.active a {
+            margin: 10px 0;
+        }
+
         /* Main Content */
         main {
             flex: 1;
@@ -69,16 +94,15 @@
             justify-content: center;
             padding: 3em;
         }
-        /* Main Content */
+
         main h2 {
-            font-size: 3.5em; /* Increased size */
+            font-size: 3.5em;
             color: #ff9900;
             text-shadow: 0 0 10px #ff9900;
             margin-bottom: 1em;
             text-transform: uppercase;
             letter-spacing: 2px;
         }
-
 
         /* Contact Form */
         .contact-form {
@@ -147,47 +171,39 @@
         }
 
         /* Footer */
-        /* Footer */
-    footer {
-        background: rgba(0, 0, 0, 0.7);
-        color: white;
-        text-align: center;
-        padding: 15px;
-        width: 100%;
-        z-index: 1000;
-        backdrop-filter: blur(8px);
-        border-top: 2px solid #ffcc00;
-        position: sticky;
-        bottom: 0;
-    }
+        footer {
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+            text-align: center;
+            padding: 15px;
+            width: 100%;
+            backdrop-filter: blur(8px);
+            border-top: 2px solid #ffcc00;
+        }
 
-    .footer-links {
-        margin-top: 10px;
-    }
+        .footer-links {
+            margin-top: 10px;
+        }
 
-    .footer-links a {
-        color: #ffcc00;
-        text-decoration: none;
-        margin: 0 10px;
-        font-size: 14px;
-    }
+        .footer-links a {
+            color: #ffcc00;
+            text-decoration: none;
+            margin: 0 10px;
+            font-size: 14px;
+        }
 
-    .footer-links a:hover {
-        text-decoration: underline;
-    }
+        .footer-links a:hover {
+            text-decoration: underline;
+        }
 
         /* Responsive Design */
         @media only screen and (max-width: 768px) {
-            .navbar {
-                flex-direction: column;
-                text-align: center;
-                padding: 15px 20px;
+            .menu-toggle {
+                display: block;
             }
 
             .nav-links {
-                flex-direction: column;
-                gap: 10px;
-                align-items: center;
+                display: none;
             }
 
             .contact-form {
@@ -203,15 +219,13 @@
             }
         }
     </style>
-    <script type="text/javascript"
-    src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-    </script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script type="text/javascript">
-    (function(){
-    emailjs.init({
-        publicKey: "RC2A4YfAGSANjUCEW",
-    });
-    })();
+        (function(){
+            emailjs.init({
+                publicKey: "RC2A4YfAGSANjUCEW",
+            });
+        })();
     </script>
 </head>
 <body>
@@ -220,7 +234,8 @@
         <div class="logo">
             <img src="./images/home/signature (2).png" alt="BlastBazzar Logo">
         </div>
-        <ul class="nav-links">
+        <div class="menu-toggle" id="menu-toggle">&#9776;</div>
+        <ul class="nav-links" id="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="shopping_cart.html">Cart</a></li>
             <li><a href="about_us.html">About Us</a></li>
@@ -232,9 +247,9 @@
     <main>
         <h2>Contact Us</h2>
         <div class="contact-form">
-            <form>
+            <form onsubmit="sendMail(event)">
                 <label for="contact">Contact</label>
-                <input type="text" id="contact" placeholder="Enter you number" required>
+                <input type="text" id="contact" placeholder="Enter your number" required>
 
                 <label for="email">Email:</label>
                 <input type="email" id="email" placeholder="Enter your email" required>
@@ -242,7 +257,7 @@
                 <label for="message">Message:</label>
                 <textarea id="message" placeholder="Write your message..." required></textarea>
 
-                <button type="submit" onclick="sendMail()">Send Message</button>
+                <button type="submit">Send Message</button>
             </form>
         </div>
     </main>
@@ -257,13 +272,21 @@
     </footer>
 
     <script>
-        function sendMail(){
-            let parms = {
+        document.getElementById('menu-toggle').addEventListener('click', function() {
+            document.getElementById('nav-links').classList.toggle('active');
+        });
+
+        function sendMail(event){
+            event.preventDefault();
+            let params = {
                 contact : document.getElementById("contact").value,
                 email : document.getElementById("email").value,
                 message : document.getElementById("message").value,
-            }
-            emailjs.send("service_8ifeixa","template_ou1vsxq".parms).then(alert("Email send!!"))
+            };
+
+            emailjs.send("service_8ifeixa", "template_ou1vsxq", params)
+                .then(() => alert("Email sent successfully!"))
+                .catch(err => alert("Failed to send email. Please try again."));
         }
     </script>
 </body>
