--- a/checkout.html
+++ b/checkout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnH1zlLdD8xZ0W7b5f5BX5IXR4Ip4+4FJXZQ9xZgWwZeqP5w4vD2eZ9x2s3O9X0j3FkPGrfKw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
 /* General Styles */
 body {
@@ -80,7 +81,7 @@ main {
     text-align: center;
     max-width: 100vw;
     overflow-x: hidden;
-    flex-grow: 1; /* Allow main to grow and fill space */
+    flex-grow: 1; 
 }
 
 main h2 {
@@ -176,63 +177,48 @@ td img {
 
 /* Footer */
 footer {
-        background: rgba(0, 0, 0, 0.7);
-        color: white;
-        text-align: center;
-        padding: 15px;
-        width: 100%;
-        z-index: 1000;
-        backdrop-filter: blur(8px);
-        border-top: 2px solid #ffcc00;
-        position: sticky;
-        bottom: 0;
-    }
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    text-align: center;
+    padding: 15px;
+    width: 100%;
+    z-index: 1000;
+    backdrop-filter: blur(8px);
+    border-top: 2px solid #ffcc00;
+    position: sticky;
+    bottom: 0;
+}
 
-    .footer-links {
-        margin-top: 10px;
-    }
+.footer-links {
+    margin-top: 10px;
+}
 
-    .footer-links a {
-        color: #ffcc00;
-        text-decoration: none;
-        margin: 0 10px;
-        font-size: 14px;
-    }
+.footer-links a {
+    color: #ffcc00;
+    text-decoration: none;
+    margin: 0 10px;
+    font-size: 14px;
+}
 
-    .footer-links a:hover {
-        text-decoration: underline;
-    }
+.footer-links a:hover {
+    text-decoration: underline;
+}
 
 /* Responsive Styles */
 @media only screen and (max-width: 768px) {
-    .navbar {
-        text-align: center;
-        flex-direction: column;
-        align-items: center;
-        padding: 15px 10px;
-    }
-
     .nav-links {
-        align-items: center;
         flex-direction: column;
-        gap: 15px;
-        width: 100%;
-        text-align: center;
-    }
-    .logo {
         align-items: center;
-        position: inherit;
-        left: 30px;
-        top: 13%;
-        transform: translateY(-50%);
-    }
-
-    .logo img {
-        width: 180px;
-        margin-bottom: 10px;
+        width: 100%;
+        background: rgba(0, 0, 0, 0.9);
+        position: absolute;
+        top: 70px;
+        left: 0;
+        padding: 15px 0;
     }
 
     .nav-links a {
+        padding: 10px 0;
         font-size: 18px;
     }
 
@@ -288,17 +274,6 @@ footer {
     }
 }
 
-::-webkit-scrollbar{
-    width: 15px;
-}
-::-webkit-scrollbar-track{
-    background: #0b0b0b;
-}
-::-webkit-scrollbar-thumb{
-    background: linear-gradient(#e09b1b, #7a2e11);
-}
-
-
     </style>
 </head>
 <body>
@@ -308,10 +283,10 @@ footer {
                 <img src="./images/home/signature (2).png" alt="BlastBazzar Logo">
             </div>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="shopping_cart.html">Cart</a></li>
-                <li><a href="about_us.html">About Us</a></li>
-                <li><a href="contact_us.html">Contact</a></li>
+                <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="shopping_cart.html"><i class="fas fa-shopping-cart"></i> Cart</a></li>
+                <li><a href="about_us.html"><i class="fas fa-info-circle"></i> About Us</a></li>
+                <li><a href="contact_us.html"><i class="fas fa-envelope"></i> Contact</a></li>
             </ul>
         </div>
     </header>
@@ -334,7 +309,7 @@ footer {
             </table>
 
             <h3 id="checkout-total">Total: ₹0</h3>
-            <button class="cart-btn checkout-btn" onclick="completeCheckout()" href="details.html">Complete Purchase</button>
+            <button class="cart-btn checkout-btn" onclick="completeCheckout()">Complete Purchase</button>
         </div>
     </main>
 
