--- a/login.html
+++ b/login.html
@@ -33,6 +33,7 @@
             border-bottom: 2px solid #ffcc00;
             z-index: 1000;
             backdrop-filter: blur(8px);
+            position: relative;
         }
 
         .logo img {
@@ -59,176 +60,198 @@
             color: #ff9900;
             text-shadow: 0 0 10px #ff9900;
         }
-/* Main Content */
-main {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 3em;
-}
 
-/* Login Form */
-.login-container {
-    max-width: 450px;
-    width: 100%;
-    margin: auto;
-    background: rgba(0, 0, 0, 0.6);
-    padding: 3em;
-    border-radius: 15px;
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.6);
-    backdrop-filter: blur(10px);
-    border: 2px solid #ffcc00;
-    transition: transform 0.3s ease;
-}
+        .menu-toggle {
+            display: none;
+            font-size: 30px;
+            cursor: pointer;
+            color: white;
+        }
 
-.login-container h2 {
-    font-size: 2.5em;
-    margin-bottom: 1.5em;
-    color: #ffcc00;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    text-align: center;
-}
+        .nav-links.active {
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            top: 70px;
+            right: 30px;
+            background: rgba(0, 0, 0, 0.9);
+            padding: 20px;
+            border-radius: 10px;
+            border: 2px solid #ffcc00;
+        }
 
-.login-form {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
+        /* Main Content */
+        main {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 3em;
+        }
 
-.login-form input {
-    padding: 15px;
-    font-size: 1em;
-    border: 2px solid #ffcc00;
-    border-radius: 5px;
-    background: rgba(255, 255, 255, 0.1);
-    color: #fff;
-    transition: border-color 0.3s ease;
-}
+        /* Login Form */
+        .login-container {
+            max-width: 450px;
+            width: 100%;
+            margin: auto;
+            background: rgba(0, 0, 0, 0.6);
+            padding: 3em;
+            border-radius: 15px;
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.6);
+            backdrop-filter: blur(10px);
+            border: 2px solid #ffcc00;
+            transition: transform 0.3s ease;
+        }
 
-.login-form input:focus {
-    border-color: #ff9900;
-    outline: none;
-}
+        .login-container h2 {
+            font-size: 2.5em;
+            margin-bottom: 1.5em;
+            color: #ffcc00;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            text-align: center;
+        }
 
-.login-form button {
-    padding: 15px;
-    font-size: 1.2em;
-    border: none;
-    border-radius: 5px;
-    background: #ffcc00;
-    color: #000;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
+        .login-form {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
 
-.login-form button:hover {
-    background: #ff9900;
-    color: white;
-}
+        .login-form input {
+            padding: 15px;
+            font-size: 1em;
+            border: 2px solid #ffcc00;
+            border-radius: 5px;
+            background: rgba(255, 255, 255, 0.1);
+            color: #fff;
+            transition: border-color 0.3s ease;
+        }
 
-/* Footer */
-footer {
-        background: rgba(0, 0, 0, 0.7);
-        color: white;
-        text-align: center;
-        padding: 15px;
-        width: 100%;
-        z-index: 1000;
-        backdrop-filter: blur(8px);
-        border-top: 2px solid #ffcc00;
-        position: sticky;
-        bottom: 0;
-    }
+        .login-form input:focus {
+            border-color: #ff9900;
+            outline: none;
+        }
 
-    .footer-links {
-        margin-top: 10px;
-    }
+        .login-form button {
+            padding: 15px;
+            font-size: 1.2em;
+            border: none;
+            border-radius: 5px;
+            background: #ffcc00;
+            color: #000;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
 
-    .footer-links a {
-        color: #ffcc00;
-        text-decoration: none;
-        margin: 0 10px;
-        font-size: 14px;
-    }
+        .login-form button:hover {
+            background: #ff9900;
+            color: white;
+        }
 
-    .footer-links a:hover {
-        text-decoration: underline;
-    }
+        /* Footer */
+        footer {
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+            text-align: center;
+            padding: 15px;
+            width: 100%;
+            z-index: 1000;
+            backdrop-filter: blur(8px);
+            border-top: 2px solid #ffcc00;
+            position: sticky;
+            bottom: 0;
+        }
 
-/* Responsive Styles */
-@media only screen and (max-width: 1024px) {
-    .navbar {
-        padding: 15px 20px;
-    }
+        .footer-links {
+            margin-top: 10px;
+        }
 
-    .login-container {
-        max-width: 90%;
-        padding: 1.5em;
-    }
+        .footer-links a {
+            color: #ffcc00;
+            text-decoration: none;
+            margin: 0 10px;
+            font-size: 14px;
+        }
 
-    .login-container h2 {
-        font-size: 2em;
-    }
+        .footer-links a:hover {
+            text-decoration: underline;
+        }
 
-    .login-form input {
-        font-size: 0.9em;
-    }
+        /* Responsive Styles */
+        @media only screen and (max-width: 1024px) {
+            .navbar {
+                padding: 15px 20px;
+            }
 
-    .login-form button {
-        font-size: 1.1em;
-    }
-}
+            .login-container {
+                max-width: 90%;
+                padding: 1.5em;
+            }
 
-@media only screen and (max-width: 768px) {
-    .navbar {
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 15px 10px;
-    }
+            .login-container h2 {
+                font-size: 2em;
+            }
 
-    .login-container {
-        max-width: 100%;
-        padding: 1.5em;
-    }
+            .login-form input {
+                font-size: 0.9em;
+            }
 
-    .login-container h2 {
-        font-size: 1.8em;
-    }
+            .login-form button {
+                font-size: 1.1em;
+            }
+        }
 
-    .login-form input {
-        font-size: 1em;
-    }
+        @media only screen and (max-width: 768px) {
+            .menu-toggle {
+                display: block;
+            }
 
-    .login-form button {
-        font-size: 1.1em;
-    }
-}
+            .nav-links {
+                display: none;
+            }
 
-@media only screen and (max-width: 480px) {
-    .navbar {
-        padding: 10px;
-    }
+            .login-container {
+                max-width: 100%;
+                padding: 1.5em;
+            }
 
-    .login-container {
-        max-width: 100%;
-        padding: 1em;
-    }
+            .login-container h2 {
+                font-size: 1.8em;
+            }
 
-    .login-container h2 {
-        font-size: 1.6em;
-    }
+            .login-form input {
+                font-size: 1em;
+            }
 
-    .login-form input {
-        font-size: 0.9em;
-    }
+            .login-form button {
+                font-size: 1.1em;
+            }
+        }
 
-    .login-form button {
-        font-size: 1em;
-    }
-}
+        @media only screen and (max-width: 480px) {
+            .navbar {
+                padding: 10px;
+            }
+
+            .login-container {
+                max-width: 100%;
+                padding: 1em;
+            }
+
+            .login-container h2 {
+                font-size: 1.6em;
+            }
+
+            .login-form input {
+                font-size: 0.9em;
+            }
+
+            .login-form button {
+                font-size: 1em;
+            }
+        }
     </style>
 </head>
 <body>
@@ -236,7 +259,8 @@ footer {
         <div class="logo">
             <img src="./images/home/signature (2).png" alt="BlastBazzar Logo">
         </div>
-        <ul class="nav-links">
+        <div class="menu-toggle" id="menu-toggle">&#9776;</div>
+        <ul class="nav-links" id="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="shopping_cart.html">Cart</a></li>
             <li><a href="about_us.html">About Us</a></li>
@@ -260,5 +284,10 @@ footer {
             <a href="license.html">License</a>
         </div>
     </footer>
+    <script>
+        document.getElementById('menu-toggle').addEventListener('click', function() {
+            document.getElementById('nav-links').classList.toggle('active');
+        });
+    </script>
 </body>
 </html>
