add the new files

--- a/index.html
+++ b/index.html
@@ -74,6 +74,27 @@ body {
     text-shadow: 0 0 10px #ff9900;
 }
 
+#navbar {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: transparent; /* Dark background */
+    padding: 10px 20px;
+    height: 60px;
+}
+
+#userIcon {
+    font-size: 24px; /* Adjust the icon size */
+    color: white; /* Icon color */
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+}
+
+#userIcon:hover {
+    transform: scale(1.2); /* Slight zoom effect on hover */
+}
+
+
 .menu-toggle 
 {
             display: none;
@@ -353,6 +374,9 @@ footer {
             <li><a href="contact_us.html">Contact</a></li>
             <li><a href="login.html">Login</a></li>
         </ul>
+        <div id="navbar">
+            <span id="userIcon" style="display: none;">👤</span>
+          </div>
     </div>
     <div id="toast" class="toast"></div>
     <!-- Product Listings -->
@@ -832,6 +856,13 @@ footer {
         </div>
     </footer>
 
+    <script>
+        const user = JSON.parse(localStorage.getItem("user"));
+        if (user) {
+          document.getElementById("userIcon").style.display = "inline";
+        }
+      </script>
+
     <script src="cart.js"></script>
     <script>
        function toggleMenu() {
@@ -840,34 +871,5 @@ footer {
      }
 
     </script>
-
-
-
-<!-- Firebase connection -->
-
-
-<script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.3.0/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.3.0/firebase-analytics.js";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-  
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    const firebaseConfig = {
-      apiKey: "AIzaSyDTeRYrv3lTYNADyRjvUeumW1dYjFC_2fE",
-      authDomain: "blastbazzar-b835d.firebaseapp.com",
-      projectId: "blastbazzar-b835d",
-      storageBucket: "blastbazzar-b835d.firebasestorage.app",
-      messagingSenderId: "849482832101",
-      appId: "1:849482832101:web:a3eac0b1f1bd18083b1c0c",
-      measurementId: "G-XS1FF6JQFH"
-    };
-  
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const analytics = getAnalytics(app);
-  </script>
 </body>  
 </html>
